--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Heading one added-1</h1>
     <h2>h2 added</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quam nam ut itaque tempore atque labore quo quis expedita aperiam? Nihil voluptas voluptatibus obcaecati nesciunt omnis exercitationem saepe nulla quas!</p>
 </body>
 </html>
